--- a/functions/package.json
+++ b/functions/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "playground-web",
-  "version": "1.0.0",
-  "private": true,
+  "name": "functions",
+  "description": "Cloud Functions for Firebase",
   "scripts": {
-    "dev": "nuxt --dotenv .env.dev",
-    "build": "nuxt build --dotenv .env.prod",
-    "start": "nuxt start --dotenv .env.prod",
-    "generate": "nuxt generate",
-    "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
-    "lint:prettier": "prettier --check .",
-    "lint": "npm run lint:js && npm run lint:prettier",
-    "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
+    "serve": "firebase emulators:start --only functions",
+    "shell": "firebase functions:shell",
+    "start": "npm run shell",
+    "deploy": "firebase deploy --only functions",
+    "logs": "firebase functions:log"
   },
+  "engines": {
+    "node": "16"
+  },
+  "main": "index.js",
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/firebase": "8.2.2",
-    "cookie-universal-nuxt": "2.2.1",
     "core-js": "^3.19.3",
     "dotenv": "16.0.1",
     "firebase": "9.8.4",
-    "nuxt": "^2.15.8",
+    "firebase-admin": "^10.0.2",
+    "firebase-functions": "^3.18.0",
+    "nuxt-start": "2.15.8",
+    "cookie-universal-nuxt": "2.2.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
@@ -34,8 +36,10 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "firebase-functions-test": "^0.2.0",
     "node-sass": "^6.0.1",
     "prettier": "^2.5.1",
     "sass-loader": "^10.2.1"
-  }
+  },
+  "private": true
 }
