feat: 구글맵 장소 검색 API 연동(진행중)

--- a/.env.dev
+++ b/.env.dev
@@ -13,3 +13,5 @@ FIREBASE_STORAGE_BUCKET = vangvang-log-dev.appspot.com
 FIREBASE_MESSAGING_SENDER_ID = 309530561058
 FIREBASE_APP_ID = 1:309530561058:web:4ea50c41db3fbe995d187b
 FIREBASE_MEASUREMENT_ID = G-CBHBTPYXJK
+
+GOOGLE_MAP_KEY = AIzaSyDGxiZ8vu95zh9qGvPaUUeScLyIEQ1ynpw
