--- a/functions/package.json
+++ b/functions/package.json
@@ -15,13 +15,14 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/firebase": "8.2.2",
+    "cookie-universal-nuxt": "2.2.1",
     "core-js": "^3.19.3",
     "dotenv": "16.0.1",
     "firebase": "9.8.4",
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
+    "googleapis": "105.0.0",
     "nuxt-start": "2.15.8",
-    "cookie-universal-nuxt": "2.2.1",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
